link working issue

--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 				<div class="navbar-social">
 					<ul>
 						<div class="social">
-							<li><a href=""><i class="fa fa-facebook"></i></a></li>
-							<li><a href=""><i class="fa fa-twitter"></i></a></li>
-							<li><a href=""><i class="fa fa-instagram"></i></a></li>
-							<li><a href=""><i class="fa fa-linkedin"></i></a></li>
-							<li><a href=""><i class="fa fa-pinterest"></i></a></li>
+							<li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a></li>
+							<li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a></li>
+							<li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a></li>
+							<li><a href="https://www.linkedin.com/in/abdul-muqeet-ahmad/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
 						</div>
 					</ul>
 				</div>
 			</div>
 		</div>
+		
 	</header>
 	<header>
 		<div class="container">
@@ -61,7 +61,7 @@
 						<h3>Software Developer</h3>
 						<div class="btns">
 							<div class="cv-btn">
-								<a onclick="downloadCV()" href="./AbdulMuqeetAhmad- Cv.pdf">Download CV</a>
+								<a onclick="downloadCV('AbdulMuqeetAhmad- Cv.pdf')" href="./AbdulMuqeetAhmad- Cv.pdf">Download CV</a>
 
 							</div>
 							<div class="hire-btn">
@@ -131,11 +131,10 @@
 							</div>
 						</div>
 						<div class="social-links">
-							<a href=""><i class="fa fa-facebook"></i></a>
-							<a href=""><i class="fa fa-twitter"></i></a>
-							<a href=""><i class="fa fa-instagram"></i></a>
-							<a href=""><i class="fa fa-linkedin"></i></a>
-
+							<a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+							<a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
+							<a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+							<a href="https://www.linkedin.com/in/abdul-muqeet-ahmad/" target="_blank"><i class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
@@ -585,11 +584,10 @@
 					Abdul Muqeet Ahmad
 				</div>
 				<div class="social">
-					<a href=""><i class="fa fa-facebook"></i></a>
-					<a href=""><i class="fa fa-twitter"></i></a>
-					<a href=""><i class="fa fa-instagram"></i></a>
-					<a href=""><i class="fa fa-linkedin"></i></a>
-					<a href=""><i class="fa fa-pinterest"></i></a>
+					<a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
+					<a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
+					<a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
+					<a href="https://www.linkedin.com/in/abdul-muqeet-ahmad/" target="_blank"><i class="fa fa-linkedin"></i></a>
 				</div>
 			</div>
 		</div>
