changes the skillsets

--- a/index.html
+++ b/index.html
@@ -12,23 +12,6 @@
 	<header>
 		<div class="container">
 			<div class="row">
-				<div class="navbar-social">
-					<ul>
-						<div class="social">
-							<li><a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a></li>
-							<li><a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a></li>
-							<li><a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a></li>
-							<li><a href="https://www.linkedin.com/in/abdul-muqeet-ahmad/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
-						</div>
-					</ul>
-				</div>
-			</div>
-		</div>
-		
-	</header>
-	<header>
-		<div class="container">
-			<div class="row">
 				<div class="brand-name">
 					<a href="" class="logo">Abdul Muqeet Ahmad </a>
 				</div>
@@ -56,13 +39,12 @@
 			<div class="row full-screen">
 				<div class="home-content">
 					<div class="block">
-						<h6>Hello, My Name is</h6>
+						<h6>Hello, I am</h6>
 						<h1>Abdul Muqeet Ahmad</h1>
 						<h3>Software Developer</h3>
 						<div class="btns">
 							<div class="cv-btn">
-								<a onclick="downloadCV('AbdulMuqeetAhmad- Cv.pdf')" href="./AbdulMuqeetAhmad- Cv.pdf">Download CV</a>
-
+								<a onclick="downloadCV('AbdulMuqeetAhmad- Cv.pdf')">Download CV</a>
 							</div>
 							<div class="hire-btn">
 								<a href="#contact">Hire ME</a>
@@ -89,41 +71,27 @@
 			<div class="about-content">
 				<div class="row">
 					<div class="img">
-						<img src="images/hero/5.png" alt="about-me" />
+						<img src="images/hero/8.jpeg" alt="about-me" />
 					</div>
 					<div class="text">
 						<h4>I'M Abdul Muqeet Ahmad</h4>
 						<h6>A <span>Software</span> Developer </h6>
 						<p>I am an energetic, ambitious person and highly accomplished, skilled and disciplined
-							individual
-							with an aim to grow in a professional world and produce innovative products and solutions,
-							As a
-							graduate in computer science my main aim is to strive for excellence while overcoming
-							challenges
-							in order to grow as a professional, acquiring new skills, learning new technologies. I am
-							able
-							to grasp new concepts quickly and efficiently.
+							individual with an aim to grow in a professional world and produce innovative products and
+							solutions, with over 4 years of hands-on
+							experience. Holding a degree in computer science, my relentless ambition drives me to
+							achieve excellence in my professional journey. I thrive on challenges, quickly grasping and
+							applying new concepts to stay at the forefront of technology. My disciplined approach and
+							innovative mindset make me a valuable asset in crafting cutting-edge products and solutions.
 						</p>
 						<div class="info">
-							<div class="list">
-								<label>Birthday:</label>
-								<p>25th December 1995</p>
-							</div>
 							<div class="list">
 								<label>Email:</label>
 								<p>abdulmuqeetahmad25@gmail.com</p>
 							</div>
 							<div class="list">
 								<label>Phone:</label>
-								<p>+92 336 0535217</p>
-							</div>
-							<div class="list">
-								<label>Residence:</label>
-								<p>Pakistan</p>
-							</div>
-							<div class="list">
-								<label>Address:</label>
-								<p>Pakarab Housing Society, Lahore</p>
+								<p>+92 304 4459670</p>
 							</div>
 							<div class="list">
 								<label>Freelance:</label>
@@ -134,7 +102,8 @@
 							<a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
 							<a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
 							<a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
-							<a href="https://www.linkedin.com/in/abdul-muqeet-ahmad/" target="_blank"><i class="fa fa-linkedin"></i></a>
+							<a href="https://www.linkedin.com/in/abdul-muqeet-ahmad/" target="_blank"><i
+									class="fa fa-linkedin"></i></a>
 						</div>
 					</div>
 				</div>
@@ -147,81 +116,142 @@
 		<div class="container">
 			<div class="row">
 				<div class="section-title text-center">
-					<h1>Our Services</h1>
+					<h1>Career Trajectory</h1>
 				</div>
 			</div>
 			<div class="row">
 				<div class="service-content">
 					<div class="box">
 						<div class="icon">
-							<i class="fa fa-laptop"></i>
+							<img class="icon-career" src="images/hero/introtech.jpg" alt="Folder Icon">
 						</div>
-						<h5>Unique Design</h5>
+						<h5>Senior Software Frontend Developer</h5>
+						<h6>Introtech Solutions [ 01/01/2022 – Current ]</h6>
+						<h6>City: Lahore</h6>
+						<h6>Roles and Contributions</h6>
+						<div>
+							<p>
+								• Lead a team of developers in designing and implementing scalable and performant
+								Angular
+								applications,
+								driving the adoption of best practices and ensuring consistent code quality.
+							</p>
+							<p>
+								• Architect robust frontend solutions, integrating complex user interfaces with RESTful
+								APIs,
+								and enhancing
+								user experiences through intuitive designs and smooth interactions.
+							</p>
+							<p>
+								• Mentor junior developers, conducting code reviews and knowledge-sharing sessions,
+								resulting in
+								skill
+								development and an empowered team delivering high-quality software.
+							</p>
+							<p>
+								• Collaborate closely with cross-functional teams including UX/UI designers and backend
+								engineers to define
+								requirements, troubleshoot issues, and deliver feature-rich applications on time.
+							</p>
+							<p>
+								• Spearhead the migration of legacy applications to modern Angular versions, optimizing
+								codebase
+								and
+								refactoring for improved maintainability and enhanced application performance.
+							</p>
+
+						</div>
+						<h6>Tools & Skills</h6>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-							has been the industry's standard dummy text ever since the 1500s, when an unknown
-							printer took a galley of type and scrambled it to make a type specimen book. It has
-							survived not only five centuries,
+							Angular 16, JavaScript, TypeScript, Angular Material, Angular Flex, Chart JS, RXJS, HTML5,
+							SASS/SCSS,
+							CSS3, GIT, Azure DevOps, Swagger, Karma, Jasmine, JMeter, Java Spring boot, Maven, MySQL, VS
+							Code, Intelli J
+						</p>
+					</div>
+
+					<div class="box">
+						<div class="icon">
+							<img class="icon-career" src="images/hero/amigo.jpg" alt="Folder Icon">
+						</div>
+						<h5>Frontend Developer</h5>
+						<h6>Introtech Solutions [ 01/10/2020 – 31/12/2021 ]</h6>
+						<h6>City: Lahore</h6>
+						<h6>Roles and Contributions</h6>
+						<div>
+							<p>
+								• Developed and maintained responsive web applications using the Angular framework,
+								translating design mockups into interactive, pixel-perfect user interfaces.</p>
+							<p>
+								• Collaborated with cross-functional teams to implement frontend features, ensuring
+								seamless
+								integration
+								with backend services and APIs for data retrieval and manipulation.
+							</p>
+							<p>
+								• Implemented efficient state management using RxJS observables, enhancing application
+								performance and
+								user experience through real-time data updates.
+							</p>
+							<p>
+								• Actively engaged in continuous learning and skill enhancement, staying current with
+								industry trends and
+								contributing innovative ideas to improve development processes.
+							</p>
+							<p>
+								• Participated in code reviews, conducting thorough analysis to identify and address
+								code
+								quality issues,
+								resulting in improved codebase and reduced bugs.
+							</p>
+						</div>
+						<h6>Tools & Skills</h6>
+						<p>
+							Angular 14, JavaScript, TypeScript, Angular Material, Angular Flex, Chart JS, RXJS, HTML5,
+							SASS/SCSS,
+							CSS3, GIT, Azure DevOps, Unit testing karma jasmine, VS Code
 						</p>
 					</div>
 					<div class="box">
 						<div class="icon">
-							<i class="fa fa-columns"></i>
+							<img class="icon-career" src="images/hero/amigo.jpg" alt="Folder Icon">
 						</div>
-						<h5>Different Layout</h5>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-							has been the industry's standard dummy text ever since the 1500s, when an unknown
-							printer took a galley of type and scrambled it to make a type specimen book. It has
-							survived not only five centuries,
-						</p>
-					</div>
-					<div class="box">
-						<div class="icon">
-							<i class="fa fa-code"></i>
+						<h5>Junior Frontend Developer </h5>
+						<h6>Amigo Software Limited [ 01/06/2019 – 09/2020 ]
+						</h6>
+						<h6>City: Lahore</h6>
+						<h6>Roles and Contributions</h6>
+						<div>
+							<p>
+								• Contributed to the development of interactive web applications using Angular,
+								collaborating with senior
+								developers to implement frontend features and enhance user experiences.</p>
+							<p>
+								• Assisted in optimizing application performance by implementing responsive designs,
+								code refactoring, and
+								efficient data rendering techniques.
+							</p>
+							<p>
+								• Actively participated in team discussions and code reviews, offering insights and
+								suggestions to improve
+								code quality, maintainability, and overall project delivery.
+							</p>
+							<p>
+								• Supported the integration of RESTful APIs, ensuring seamless communication between
+								frontend and
+								backend systems for data retrieval and updates.
+							</p>
+							<p>
+								• Engaged in continuous learning and professional development, exploring new Angular
+								features, libraries,
+								and best practices to enhance skills and contribute to project innovation.
+							</p>
 						</div>
-						<h5>Make it simple</h5>
+						<h6>Tools & Skills</h6>
 						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-							has been the industry's standard dummy text ever since the 1500s, when an unknown
-							printer took a galley of type and scrambled it to make a type specimen book. It has
-							survived not only five centuries,
-						</p>
-					</div>
-					<div class="box">
-						<div class="icon">
-							<i class="fa fa-mobile"></i>
-						</div>
-						<h5>Responsiveness</h5>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-							has been the industry's standard dummy text ever since the 1500s, when an unknown
-							printer took a galley of type and scrambled it to make a type specimen book. It has
-							survived not only five centuries,
-						</p>
-					</div>
-					<div class="box">
-						<div class="icon">
-							<i class="fa fa-search"></i>
-						</div>
-						<h5>Testing for Perfection</h5>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-							has been the industry's standard dummy text ever since the 1500s, when an unknown
-							printer took a galley of type and scrambled it to make a type specimen book. It has
-							survived not only five centuries,
-						</p>
-					</div>
-					<div class="box">
-						<div class="icon">
-							<i class="fa fa-cog"></i>
-						</div>
-						<h5>Advanced Options</h5>
-						<p>
-							Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum
-							has been the industry's standard dummy text ever since the 1500s, when an unknown
-							printer took a galley of type and scrambled it to make a type specimen book. It has
-							survived not only five centuries,
+							Angular 8, JavaScript, TypeScript, Bootstrap, jQuery Angular Material, RXJS, HTML5,
+							SASS/SCSS, CSS3, GIT,
+							VS Code
 						</p>
 					</div>
 				</div>
@@ -241,59 +271,62 @@
 				<div class="skills-content">
 					<div class="row">
 						<div class="section-title">
-							<h1>Professional Skills</h1>
+							<h1>TECHNICAL PROFICIENCES </h1>
 							<p>
-								- Interpersonal skills, Creative, Problem solving, Analytical skills.
-								- Potential to cope with pressures of tight deadlines and demanding schedule.
+							<h5>Advanced Skillset: </h5>
+							<ol>
+
+								<li> TypeScript </li>
+								<li> JavaScript </li>
+								<li> NodeJS </li>
+								<li> jQuery </li>
+								<li> Angular </li>
+								<li> RXJS </li>
+								<li> Angular Material </li>
+								<li> Bootstrap </li>
+								<li> Angular Flex </li>
+								<li> Chart JS </li>
+								<li> HMTL5 </li>
+								<li> CSS SASS/SCSS </li>
+								<li> GIT </li>
+								<li> Unit Testing </li>
+								<li> HTTP Client </li>
+								<li> REST API </li>
+								<li> Version control </li>
+							</ol>
+
+							</p>
+
+						</div>
+					</div>
+				</div>
+				<div class="skills-content">
+					<div class="row">
+						<div class="section-title">
+							<p>
+							<h5>Intermediate Skillset: </h5>
+							<ol>
+								<li> Java Spring boot </li>
+								<li> Maven </li>
+								<li> Redis </li>
+								<li> PHP </li>
+								<li> Laravel </li>
+								<li> XAMPP </li>
+								<li> WAMP </li>
+								<li> JMeter </li>
+								<li> MySQL </li>
+								<li> Microservices </li>
+								<li> Jamine </li>
+								<li> Karma </li>
+							</ol>
 							</p>
 						</div>
 					</div>
-					<div class="row">
-						<div class="skill-box">
-							<h6>Angular 8</h6>
-							<div class="skill-bar">
-								<div class="skill-bar-in" style="width: 80%">
-									<span>80%</span>
-								</div>
-							</div>
-						</div>
-						<div class="skill-box">
-							<h6>HTML 5</h6>
-							<div class="skill-bar">
-								<div class="skill-bar-in" style="width: 90%;">
-									<span>90%</span>
-								</div>
-							</div>
-						</div>
-						<div class="skill-box">
-							<h6>Java</h6>
-							<div class="skill-bar">
-								<div class="skill-bar-in" style="width: 75%;">
-									<span>75%</span>
-								</div>
-							</div>
-						</div>
-						<div class="skill-box">
-							<h6>Node JS</h6>
-							<div class="skill-bar">
-								<div class="skill-bar-in" style="width: 70%;">
-									<span>70%</span>
-								</div>
-							</div>
-						</div>
-						<div class="skill-box">
-							<h6>PHP</h6>
-							<div class="skill-bar">
-								<div class="skill-bar-in" style="width: 70%;">
-									<span>70%</span>
-								</div>
-							</div>
-						</div>
-					</div>
 				</div>
-				<div class="img">
+
+				<!-- <div class="img">
 					<img src="./images/hero/6.jpg" />
-				</div>
+				</div> -->
 			</div>
 		</div>
 
@@ -587,7 +620,8 @@
 					<a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook"></i></a>
 					<a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter"></i></a>
 					<a href="https://www.instagram.com" target="_blank"><i class="fa fa-instagram"></i></a>
-					<a href="https://www.linkedin.com/in/abdul-muqeet-ahmad/" target="_blank"><i class="fa fa-linkedin"></i></a>
+					<a href="https://www.linkedin.com/in/abdul-muqeet-ahmad/" target="_blank"><i
+							class="fa fa-linkedin"></i></a>
 				</div>
 			</div>
 		</div>
